--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
                     <h3> <i class="fas fa-envelope"></i> churlet.sylvain@gmail.com </h3>
                     <h3> <i class="fas fa-phone"></i> +33 7 83 25 60 72 </h3>
                     <h3> <i class="fas fa-map-marker-alt"></i> 3 All. Louis de Broglie, Annecy, France </h3>
-                    <h3><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/sylvain-churlet-8629691bb/" target="_blank">Sylvain Churlet</a></h3>
+                    <h3><i class="fab fa-linkedin-in"></i> <a
+                            href="https://www.linkedin.com/in/sylvain-churlet-8629691bb/" target="_blank">Sylvain
+                            Churlet</a></h3>
+                    <h3> <i class="fab fa-instagram"></i><a href="https://www.instagram.com/sylvain_chu/"
+                            target="_blank">sylvain_chu</a></h3>
                 </div>
 
             </div>
