--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="src/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-    <header>
+    <header data-aos="fade-right">
 
         <div class="user">
             <img src="src/img/me.jpg" alt="me">
@@ -40,7 +41,7 @@
     <div id="menu" class="fas fa-bars"></div>
 
 
-    <section class="home" id="home">
+    <section class="home" id="home" data-aos="fade-left">
 
         <h3>HI THERE !</h3>
         <h1>I'm <span>Sylvain Churlet</span></h1>
@@ -54,13 +55,13 @@
     </section>
 
 
-    <section class="about" id="about">
+    <section class="about" id="about" data-aos="fade-up">
 
         <h1 class="heading"> <span>About</span> me </h1>
 
         <div class="row">
 
-            <div class="info">
+            <div class="info" >
                 <h3> <span> Birthday : </span> January 13, 2001 </h3>
                 <h3> <span> Age : </span> 20 years old</h3>
                 <h3> <span> Adress : </span> 3 All. Louis de Broglie </h3>
@@ -103,7 +104,7 @@
     </section>
 
 
-    <section class="education" id="education">
+    <section class="education" id="education" data-aos="fade-up">
 
         <h1 class="heading"><span>Experience</span> </h1>
 
@@ -134,7 +135,7 @@
     </section>
 
 
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio" id="portfolio" data-aos="fade-up">
 
         <h1 class="heading"> My <span>Portfolio</span> </h1>
 
@@ -212,9 +213,12 @@
 
     <!-- jquery  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- custom js -->
     <script src="src/js/main.js"></script>
-
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
