--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#education">Experience</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -61,7 +62,7 @@
 
         <div class="row">
 
-            <div class="info" >
+            <div class="info">
                 <h3> <span> Birthday : </span> January 13, 2001 </h3>
                 <h3> <span> Age : </span> 20 years old</h3>
                 <h3> <span> Adress : </span> 3 All. Louis de Broglie </h3>
@@ -70,37 +71,46 @@
                 <h3> <span> Mail : </span> churlet.sylvain@gmail.com </h3>
                 <h3> <span> Phone number : </span> +33 (0)7 83 25 60 72 </h3>
 
-
             </div>
-
-
-            <div class="counter">
-
-                <div class="box">
-                    <span>2+</span>
-                    <h3>years of experience</h3>
-                </div>
-
-                <div class="box">
-                    <span>100+</span>
-                    <h3>porject completed</h3>
-                </div>
-
-                <div class="box">
-                    <span>430+</span>
-                    <h3>happy clients</h3>
-                </div>
-
-                <div class="box">
-                    <span>12+</span>
-                    <h3>awards won</h3>
-                </div>
-
-            </div>
-
 
         </div>
 
+    </section>
+
+    <section class="skills" id="skills" data-aos="fade-up">
+
+        <h1 class="heading">My <span>skills</span></h1>
+
+        <div class="skillsBoxes">
+
+            <div class='skillBox'>
+                <p class='title'>Databases</p>
+                <div class='infos'>
+                    <p>MCD - MLD<span data-percentage='65' class='skillBar'></span></p>
+                    <p>Mysql<span data-percentage='80' class='skillBar'></span></p>
+                    <p>PgSQL<span data-percentage='70' class='skillBar'></span></p>
+                </div>
+            </div>
+
+            <div class='skillBox'>
+                <p class='title'>Web</p>
+                <div class='infos'>
+                    <p>HTML - CSS<span data-percentage='75' class='skillBar'></span></p>
+                    <p>Javascript<span data-percentage='85' class='skillBar'></span></p>
+                    <p>NodeJs<span data-percentage='60' class='skillBar'></span></p>
+                    <p>PHP<span data-percentage='90' class='skillBar'></span></p>
+                </div>
+            </div>
+
+            <div class='skillBox'>
+                <p class='title'>Other</p>
+                <div class='infos'>
+                    <p>Linux - Unix <span data-percentage='80' class='skillBar'></span></p>
+                    <p>C# <span data-percentage='65' class='skillBar'></span></p>
+                    <p>Git <span data-percentage='70' class='skillBar'></span></p>
+                </div>
+            </div>
+        </div>
     </section>
 
 
@@ -114,19 +124,26 @@
                 <i class="fas fa-graduation-cap"></i>
                 <span>2020</span>
                 <h3>French Baccalaureate STI SIN</h3>
-                <h4>Louis Armand High School Chambéry, France</h4>
-                <p>It is a baccalaureate where we learn about technological innovation with respect to the environment.
+                <p>
+                    In July 2019, I obtained my French baccalaureate STI2D SIN at the Lycée Louis Armand (technological
+                    sciences of industry and sustainable development speciality information and digital systems). During
+                    my apprenticeship, I learned how to make a project, from its conception to its realization, through
+                    the ordering of parts and the creation of electrical diagrams. I obtained the maximum possible grade
+                    on this project, which contributed a lot to my graduation.
                 </p>
             </div>
 
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
                 <span>2022</span>
-                <h3>2 years university diploma in computer science</h3>
-                <h4>University of Savoy / IUT Annecy – Annecy-le-Vieux, France</h4>
-                <p>Currently in my second year, I am studying computer science, specifically network and software
-                    development.
-                    We also do application design, algorithms, networking, management...</p>
+                <h3>DUT informatique</h3>
+                <p>
+                    In September 2019, I started to study at the University of Savoie in Annecy, in a computer science
+                    department. During these years, I learned a lot of things like new programming languages, project
+                    management, teamwork and I deepened my knowledge in computer science. Thanks to these years, I now
+                    know that I appreciate web-oriented languages much more and I want to study them more in depth in my
+                    future studies.
+                </p>
             </div>
 
 
