update skills animation

--- a/index.html
+++ b/index.html
@@ -84,30 +84,30 @@
         <div class="skillsBoxes">
 
             <div class='skillBox'>
-                <p class='title'>Databases</p>
+                <p class='title' data-aos="zoom-in">Databases</p>
                 <div class='infos'>
-                    <p>MCD - MLD<span data-percentage='65' class='skillBar'></span></p>
-                    <p>Mysql<span data-percentage='80' class='skillBar'></span></p>
-                    <p>PgSQL<span data-percentage='70' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">MCD - MLD<span data-percentage='65' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">Mysql<span data-percentage='80' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">PgSQL<span data-percentage='70' class='skillBar'></span></p>
                 </div>
             </div>
 
             <div class='skillBox'>
-                <p class='title'>Web</p>
+                <p class='title' data-aos="zoom-in">Web</p>
                 <div class='infos'>
-                    <p>HTML - CSS<span data-percentage='75' class='skillBar'></span></p>
-                    <p>Javascript<span data-percentage='85' class='skillBar'></span></p>
-                    <p>NodeJs<span data-percentage='60' class='skillBar'></span></p>
-                    <p>PHP<span data-percentage='90' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">HTML - CSS<span data-percentage='75' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">Javascript<span data-percentage='85' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">NodeJs<span data-percentage='60' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">PHP<span data-percentage='90' class='skillBar'></span></p>
                 </div>
             </div>
 
             <div class='skillBox'>
-                <p class='title'>Other</p>
+                <p class='title' data-aos="zoom-in">Other</p>
                 <div class='infos'>
-                    <p>Linux - Unix <span data-percentage='80' class='skillBar'></span></p>
-                    <p>C# <span data-percentage='65' class='skillBar'></span></p>
-                    <p>Git <span data-percentage='70' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">Linux - Unix <span data-percentage='80' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">C# <span data-percentage='65' class='skillBar'></span></p>
+                    <p data-aos="zoom-in">Git <span data-percentage='70' class='skillBar'></span></p>
                 </div>
             </div>
         </div>
