--- a/index.html
+++ b/index.html
@@ -41,22 +41,21 @@
 
     <div id="menu" class="fas fa-bars"></div>
 
-
-    <section class="home" id="home" data-aos="fade-left">
+    <a class="anchor" id="home"></a>
+    <section class="home" data-aos="fade-left">
 
         <h3>HI THERE !</h3>
         <h1>I'm <span>Sylvain Churlet</span></h1>
         <p>
-            I'm a 2nd year student in Annecy's university as a programming learner. I am creative, dynamic and
-            innovative.
-            I’m really interested in back end, web development and database !
+            I'm a 2nd year student in Annecy's university as a programming learner. I am creative, dynamic and innovative. I’m really interested in back end, web development and database !
         </p>
-        <a href="src/others/ChurletSylvainCV.pdf" target="_blank"><button class="btn"> Download my <span> resume</span>
-                <i class="fas fa-download"></i> </button></a>
+        <a href="src/others/ChurletSylvainCV.pdf" target="_blank"><button class="btn"> <span>Download my  resume
+                <i class="fas fa-download"></i> </span></button></a>
+
     </section>
 
-
-    <section class="about" id="about" data-aos="fade-up">
+    <a class="anchor" id="about"></a>
+    <section class="about" data-aos="fade-up">
 
         <h1 class="heading"> <span>About</span> me </h1>
 
@@ -77,8 +76,8 @@
 
     </section>
 
-    <section class="skills" id="skills" data-aos="fade-up">
-
+    <a class="anchor" id="skills"></a>
+    <section class="skills" data-aos="fade-up">
         <h1 class="heading">My <span>skills</span></h1>
 
         <div class="skillsBoxes">
@@ -112,8 +111,8 @@
         </div>
     </section>
 
-
-    <section class="education" id="education" data-aos="fade-up">
+    <a class="anchor" id="education"></a>
+    <section class="education" data-aos="fade-up">
 
         <h1 class="heading"><span>Experience</span> </h1>
 
@@ -124,11 +123,8 @@
                 <span>2020</span>
                 <h3>French Baccalaureate STI SIN</h3>
                 <p>
-                    In July 2019, I obtained my French baccalaureate STI2D SIN at the Lycée Louis Armand (technological
-                    sciences of industry and sustainable development speciality information and digital systems). During
-                    my apprenticeship, I learned how to make a project, from its conception to its realization, through
-                    the ordering of parts and the creation of electrical diagrams. I obtained the maximum possible grade
-                    on this project, which contributed a lot to my graduation.
+                    In July 2019, I obtained my French baccalaureate STI2D SIN at the Lycée Louis Armand (technological sciences of industry and sustainable development speciality information and digital systems). During my apprenticeship, I learned how to make a project,
+                    from its conception to its realization, through the ordering of parts and the creation of electrical diagrams. I obtained the maximum possible grade on this project, which contributed a lot to my graduation.
                 </p>
             </div>
 
@@ -137,11 +133,8 @@
                 <span>2022</span>
                 <h3>DUT informatique</h3>
                 <p>
-                    In September 2019, I started to study at the University of Savoie in Annecy, in a computer science
-                    department. During these years, I learned a lot of things like new programming languages, project
-                    management, teamwork and I deepened my knowledge in computer science. Thanks to these years, I now
-                    know that I appreciate web-oriented languages much more and I want to study them more in depth in my
-                    future studies.
+                    In September 2019, I started to study at the University of Savoie in Annecy, in a computer science department. During these years, I learned a lot of things like new programming languages, project management, teamwork and I deepened my knowledge in computer
+                    science. Thanks to these years, I now know that I appreciate web-oriented languages much more and I want to study them more in depth in my future studies.
                 </p>
             </div>
 
@@ -150,8 +143,8 @@
 
     </section>
 
-
-    <section class="portfolio" id="portfolio" data-aos="fade-up">
+    <a class="anchor" id="portfolio"></a>
+    <section class="portfolio" data-aos="fade-up">
 
         <h1 class="heading"> My <span>Portfolio</span> </h1>
 
@@ -185,8 +178,8 @@
 
     </section>
 
-
-    <section class="contact" id="contact">
+    <a class="anchor" id="contact"></a>
+    <section class="contact">
 
         <h1 class="heading"> <span>Contact</span> me </h1>
 
@@ -200,11 +193,9 @@
                     <h3> <i class="fas fa-envelope"></i> churlet.sylvain@gmail.com </h3>
                     <h3> <i class="fas fa-phone"></i> +33 7 83 25 60 72 </h3>
                     <h3> <i class="fas fa-map-marker-alt"></i> 3 All. Louis de Broglie, Annecy, France </h3>
-                    <h3><i class="fab fa-linkedin-in"></i> <a
-                            href="https://www.linkedin.com/in/sylvain-churlet-8629691bb/" target="_blank">Sylvain
+                    <h3><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/sylvain-churlet-8629691bb/" target="_blank">Sylvain
                             Churlet</a></h3>
-                    <h3> <i class="fab fa-instagram"></i><a href="https://www.instagram.com/sylvain_chu/"
-                            target="_blank">sylvain_chu</a></h3>
+                    <h3> <i class="fab fa-instagram"></i><a href="https://www.instagram.com/sylvain_chu/" target="_blank">sylvain_chu</a></h3>
                 </div>
 
             </div>
@@ -227,11 +218,10 @@
     </div>
 
 
-    <!-- jquery  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- custom js -->
     <script src="src/js/main.js"></script>
+
     <script>
         AOS.init();
     </script>
