--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <p>
             I'm a 2nd year student in Annecy's university as a programming learner. I am creative, dynamic and innovative. I’m really interested in back end, web development and database !
         </p>
-        <a href="src/others/ChurletSylvainCV.pdf" target="_blank"><button class="btn"> <span>Download my  resume
-                <i class="fas fa-download"></i> </span></button></a>
+        <a href="src/others/ChurletSylvainCV.pdf" target="_blank"><button class="btn"> <span>Download my resume
+                    <i class="fas fa-download"></i> </span></button></a>
 
     </section>
 
@@ -118,7 +118,7 @@
 
         <div class="box-container">
 
-            <div class="box">
+            <div class="box ">
                 <i class="fas fa-graduation-cap"></i>
                 <span>2020</span>
                 <h3>French Baccalaureate STI SIN</h3>
@@ -150,28 +150,36 @@
 
         <div class="box-container">
 
-            <div class="box">
-                <img src="images/img1.jpg" alt="">
+            <div class="box" id="box1">
+                <h2 id="title1">Greek mythology</h2>
+                <p id="description1">
+                    A 1 week university project realized in a group of 6, with the objective of testing our capacities in PHP, HTML/CSS. This web site is a wiki on Greek mythology.
+                </p>
+                <a href="#" target="_blank"><img src="src/img/Greekmythology.png" alt="" id="img1"></a>
             </div>
 
-            <div class="box">
-                <img src="images/img2.jpg" alt="">
+            <div class="box" id="box2">
+                <h2 id="title2">Firewall-Defense</h2>
+                <p id="description2">
+                    A 1 week university project realized in a group of 6, with the objective of testing our capacities in C++, SFML. it's a tower defense type game with viruses instead of towers.
+                </p>
+                <a href="https://github.com/Batgame/Firewall-Defense" target="_blank"><img src="src/img/FirewallDefense.png" alt="" id="img2"></a>
             </div>
 
-            <div class="box">
-                <img src="images/img3.jpg" alt="">
+            <div class="box" id="box3">
+                <h2 id="title3">Turbo Kart Racer</h2>
+                <p id="description3">
+                    A 1 week project realized in a group of 5 by using the unity game engine. Our game is a time racing game similar to Mario Kart.
+                </p>
+                <a href="https://github.com/tmillot74/jeu-unity" target="_blank"><img src="src/img/TurboKartRacer.png" alt="" id="img3"></a>
             </div>
 
-            <div class="box">
-                <img src="images/img4.jpg" alt="">
-            </div>
-
-            <div class="box">
-                <img src="images/img5.jpg" alt="">
-            </div>
-
-            <div class="box">
-                <img src="images/img6.jpg" alt="">
+            <div class="box" id="box4">
+                <h2 id="title4">TactiCallJob</h2>
+                <p id="description4">
+                    This project is a university project for a company. It is a website that connects companies and job seekers.
+                </p>
+                <a href="https://github.com/Sylvain-Chu/tacticaljob" target="_blank"><img src="src/img/TactiCallJob.png" alt="" id="img4"></a>
             </div>
 
         </div>
