update lien dans portfolio

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <p id="description1">
                     A 1 week university project realized in a group of 6, with the objective of testing our capacities in PHP, HTML/CSS. This web site is a wiki on Greek mythology.
                 </p>
-                <a href="#" target="_blank"><img src="src/img/Greekmythology.png" alt="" id="img1"></a>
+                <a href="https://github.com/Sylvain-Chu/mythologie-grecque" target="_blank"><img src="src/img/Greekmythology.png" alt="" id="img1"></a>
             </div>
 
             <div class="box" id="box2">
