--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="src/css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+    <link rel="icon" sizes="192x192" href="https://static.parastorage.com/client/pfavico.ico">
 
 </head>
 
@@ -40,6 +43,8 @@
 
 
     <div id="menu" class="fas fa-bars"></div>
+
+
 
     <a class="anchor" id="home"></a>
     <section class="home" data-aos="fade-left">
@@ -114,7 +119,7 @@
     <a class="anchor" id="education"></a>
     <section class="education" data-aos="fade-up">
 
-        <h1 class="heading"><span>Experience</span> </h1>
+        <h1 class="heading">My <span>Experience</span> </h1>
 
         <div class="box-container">
 
