--- a/index.html
+++ b/index.html
@@ -156,35 +156,43 @@
         <div class="box-container">
 
             <div class="box" id="box1">
-                <h2 id="title1">Greek mythology</h2>
-                <p id="description1">
-                    A 1 week university project realized in a group of 6, with the objective of testing our capacities in PHP, HTML/CSS. This web site is a wiki on Greek mythology.
-                </p>
-                <a href="https://github.com/Sylvain-Chu/mythologie-grecque" target="_blank"><img src="src/img/Greekmythology.png" alt="" id="img1"></a>
+                <a href="https://github.com/Sylvain-Chu/mythologie-grecque" target="_blank">
+                    <h2 id="title1">Greek mythology</h2>
+                    <p id="description1">
+                        A 1 week university project realized in a group of 6, with the objective of testing our capacities in PHP, HTML/CSS. This web site is a wiki on Greek mythology.
+                    </p>
+                    <img src="src/img/Greekmythology.png" alt="" id="img1">
+                </a>
             </div>
 
             <div class="box" id="box2">
-                <h2 id="title2">Firewall-Defense</h2>
-                <p id="description2">
-                    A 1 week university project realized in a group of 6, with the objective of testing our capacities in C++, SFML. it's a tower defense type game with viruses instead of towers.
-                </p>
-                <a href="https://github.com/Batgame/Firewall-Defense" target="_blank"><img src="src/img/FirewallDefense.png" alt="" id="img2"></a>
+                <a href="https://github.com/Batgame/Firewall-Defense" target="_blank">
+                    <h2 id="title2">Firewall-Defense</h2>
+                    <p id="description2">
+                        A 1 week university project realized in a group of 6, with the objective of testing our capacities in C++, SFML. it's a tower defense type game with viruses instead of towers.
+                    </p>
+                    <img src="src/img/FirewallDefense.png" alt="" id="img2">
+                </a>
             </div>
 
             <div class="box" id="box3">
-                <h2 id="title3">Turbo Kart Racer</h2>
-                <p id="description3">
-                    A 1 week project realized in a group of 5 by using the unity game engine. Our game is a time racing game similar to Mario Kart.
-                </p>
-                <a href="https://github.com/tmillot74/jeu-unity" target="_blank"><img src="src/img/TurboKartRacer.png" alt="" id="img3"></a>
+                <a href="https://github.com/tmillot74/jeu-unity" target="_blank">
+                    <h2 id="title3">Turbo Kart Racer</h2>
+                    <p id="description3">
+                        A 1 week project realized in a group of 5 by using the unity game engine. Our game is a time racing game similar to Mario Kart.
+                    </p>
+                    <img src="src/img/TurboKartRacer.png" alt="" id="img3">
+                </a>
             </div>
 
             <div class="box" id="box4">
-                <h2 id="title4">TactiCallJob</h2>
-                <p id="description4">
-                    This project is a university project for a company. It is a website that connects companies and job seekers.
-                </p>
-                <a href="https://github.com/Sylvain-Chu/tacticaljob" target="_blank"><img src="src/img/TactiCallJob.png" alt="" id="img4"></a>
+                <a href="https://github.com/Sylvain-Chu/tacticaljob" target="_blank">
+                    <h2 id="title4">TactiCallJob</h2>
+                    <p id="description4">
+                        This project is a university project for a company. It is a website that connects companies and job seekers.
+                    </p>
+                    <img src="src/img/TactiCallJob.png" alt="" id="img4">
+                </a>
             </div>
 
         </div>
