--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
                 <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
             </form>
 
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44433.15073195255!2d6.093483694094722!3d45.88987465159661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478b8ffa1c0551c9%3A0x42781681620534ba!2sAnnecy!5e0!3m2!1sfr!2sfr!4v1637581366683!5m2!1sfr!2sfr"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
 
     </section>
