--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link rel="icon" href="https://static.parastorage.com/client/pfavico.ico">
+    <link rel="shortcut icon" href="src/img/logo.svg" type="image/x-icon">
 
 </head>
 
@@ -41,6 +42,7 @@
                     <li><a href="#education">Experience</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><img src="src/img/logo.svg" alt="logo"></li>
                 </ul>
             </nav>
 
@@ -58,7 +60,7 @@
             <p>
                 I'm a 2nd year student in Annecy's university as a programming learner. I am creative, dynamic and innovative. I’m really interested in back end, web development and database !
             </p>
-            <a href="src/others/ChurletSylvainCV.pdf" target="_blank">
+            <a href="src/others//ChurletSylvainCVAnglais.pdf" target="_blank">
                 <button class="btn">
                 <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
                     <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
@@ -267,7 +269,7 @@
 
     </div>
 
-    <!-- custom js -->
+    <!-- js -->
     <script src="src/js/main.js"></script>
 
 
