Update experience, education contact

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#education">Experience</a></li>
+                    <li><a href="#education">Experiences & Education</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><img src="src/img/logo.svg" alt="logo"></li>
@@ -79,10 +79,12 @@
                 <div class="info">
                     <h2><i class="fas fa-book-open"></i> Informations </h2>
                     <h3> <span> Birthday : </span> January 13, 2001 </h3>
+                    <h3> <span> Nationality : </span> French </h3>
                     <h3> <span> Age : </span> 20 years old</h3>
-                    <h3> <span> Adress : </span> 3 All. Louis de Broglie </h3>
-                    <h3> <span> City : </span> Annecy </h3>
+                    <h3> <span> Adress : </span> 174 rue Cécile Dupon Carraz, Aix-Les-Bains, France</h3>
+                    <h3> <span> City : </span> Aix les Bains </h3>
                     <h3> <span> Country : </span> France </h3>
+                    <h3> <span> Languages : </span> French (Native), English (B2 Intermediate), Spanish (A2 beginner)</h3>
                     <h3> <span> Mail : </span> churlet.sylvain@gmail.com </h3>
                     <h3> <span> Phone number : </span> +33 (0)7 83 25 60 72 </h3>
 
@@ -90,13 +92,11 @@
 
                 <div class="interest">
 
-                    <h2><i class="fas fa-running"></i> Interest </h2>
+                    <h2><i class="fas fa-running"></i> Interests </h2>
                     <h3> <span> Sports : </span> Rink Hockey (15 yeas), badminton (University sport)</h3>
                     <h3> <span> Music : </span> Clarinet (6 years) </h3>
                     <h3> <span> Reading : </span> Fantasy (Andrew Fukuda), Science Fiction : (James Dashner)</h3>
-
                 </div>
-
             </div>
 
 
@@ -199,29 +199,63 @@
         <a class="anchor" id="education"></a>
         <section class="education" id="educations">
 
-            <h1 class="heading">My <span>Experience</span> </h1>
+            <h1 class="heading">My <span>Education</span> & <span>Experiences</span></h1>
 
+            <h2>Education </h2>
             <div class="box-container">
-
-                <div class="box ">
-                    <i class="fas fa-graduation-cap"></i>
-                    <span>2020</span>
-                    <h3>French Baccalaureate STI SIN</h3>
-                    <p>
-                        In July 2019, I obtained my French baccalaureate STI2D SIN at the Lycée Louis Armand (technological sciences of industry and sustainable development speciality information and digital systems). During my apprenticeship, I learned how to make a project,
-                        from its conception to its realization, through the ordering of parts and the creation of electrical diagrams. I obtained the maximum possible grade on this project, which contributed a lot to my graduation.
-                    </p>
-
-
-                </div>
 
                 <div class="box">
                     <i class="fas fa-graduation-cap"></i>
                     <span>2022</span>
                     <h3>DUT informatique</h3>
                     <p>
-                        In September 2019, I started to study at the University of Savoie in Annecy, in a computer science department. During these years, I learned a lot of things like new programming languages, project management, teamwork and I deepened my knowledge in computer
-                        science. Thanks to these years, I now know that I appreciate web-oriented languages much more and I want to study them more in depth in my future studies.
+                        Currently in 2nd year. University of Savoy / IUT Annecy-le-Vieux, France Initiation to IT, Web, OOP, DBMS, Project Management, MERISE / UML Design
+                    </p>
+                </div>
+
+
+                <div class="box ">
+                    <i class="fas fa-graduation-cap"></i>
+                    <span>2020</span>
+                    <h3>French Baccalaureate STI SIN </h3>
+                    <p>
+                        (High School diploma specialized in IT) with honors <br> Louis Armand High School – Chambéry, France.
+                    </p>
+                </div>
+
+
+            </div>
+
+
+            <h2>Experiences</h2>
+            <div class="box-container">
+
+
+                <div class="box ">
+                    <i class="fas fa-briefcase"></i>
+                    <span>June to July 2021</span>
+                    <h3>Busar | Les papillons blancs (1000 employees) Aix-les-Bains, France </h3>
+                    <p>
+                        Helping to set up, receive and put away groceries, peel vegetables, wash dishes vegetables, washing up, ensuring the delivery of meals to the different units of the APEI.
+                    </p>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-briefcase"></i>
+                    <span>September 2019 to April 2020</span>
+                    <h3>Civic service | HCC | Sport association Hockey Club Chambery, France</h3>
+                    <p>
+                        Realization of a civic service of 8 months at the service of the club of rink field hockey of Chambery. I had for objective to supervise the young people of the club during their training as well as on the competition plateaus. I was also reinforcing
+                        the communication between the parents and the club.
+                    </p>
+                </div>
+
+                <div class="box">
+                    <i class="fas fa-briefcase"></i>
+                    <span>February 2019 (2 weeks) </span>
+                    <h3>Kitchen assistant | EHPAD (Seniors House, 50 employees) Groisy, France</h3>
+                    <p>
+                        Helping to set up, receive and put away groceries, peeling vegetables, washing vegetables, wash salads, wash dishes, clean equipment.
                     </p>
                 </div>
 
@@ -294,7 +328,7 @@
 
                     <div class="info">
                         <h3> <i class="fas fa-envelope"></i> churlet.sylvain@gmail.com </h3>
-                        <h3> <i class="fas fa-phone"></i> +33 7 83 25 60 72 </h3>
+                        <h3> <i class="fas fa-phone"></i> +33 (0)7 83 25 60 72 </h3>
                         <h3> <i class="fas fa-map-marker-alt"></i> 3 All. Louis de Broglie, Annecy, France </h3>
                         <h3><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/sylvain-churlet-8629691bb/" target="_blank">Sylvain
                                 Churlet</a></h3>
@@ -303,13 +337,31 @@
 
                 </div>
 
-                <form action="">
+                <div class="content">
+
+                    <h3 class="title">References</h3>
+
+                    <div class="info">
+                        <h2>Luc DAMAS</h2>
+                        <h3>Web programming Associate Teacher University of Savoy Annecy, France</h3>
+                        <h3> <i class="fas fa-envelope"></i>luc.damas@univ-smb.fr</h3>
+                    </div>
+
+                    <div class="info">
+                        <h2>Emmanuelle GRAZIANO</h2>
+                        <h3>Communication Teacher University of Savoy Annecy, France</h3>
+                        <h3> <i class="fas fa-envelope"></i>emmanuelle.graziano@univ-smb.fr</h3>
+                    </div>
+
+                </div>
+
+                <!-- <form action="">
                     <input type="text" placeholder="name" class="box">
                     <input type="email" placeholder="email" class="box">
                     <input type="text" placeholder="project" class="box">
                     <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
                     <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i> </button>
-                </form>
+                </form> -->
 
             </div>
 
