--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <audio src="src/others/uwu.mp3" id="audio"></audio>
+
     <div class="loader-wrapper">
         <span class="loader"><span class="loader-inner"></span></span>
     </div>
@@ -41,7 +41,7 @@
                     <li><a href="#education">Experiences & Education</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><img src="src/img/logo.svg" alt="logo"></li>
+                    <li><img src="src/img/logo.svg" alt="logo" id="logo"></li>
                 </ul>
             </nav>
 
@@ -59,7 +59,7 @@
             <p>
                 I'm a 2nd year student in Annecy's university as a programming learner. I am creative, dynamic and innovative. I’m really interested in back end, web development and database !
             </p>
-            <a href="src/others//ChurletSylvainCVAnglais.pdf" target="_blank" class="btn">
+            <a href="src/others//ChurletSylvainCVAnglais.pdf" target="_blank">
                 <button class="btn">
                 
                 <span>Download my resume</span>
@@ -200,7 +200,7 @@
 
             <h1 class="heading">My <span>Education</span> & <span>Experiences</span></h1>
 
-            <h2>Education </h2>
+            <h2 id="educationTitle">Education </h2>
             <div class="box-container">
 
                 <div class="box">
@@ -218,7 +218,7 @@
                     <span>2020</span>
                     <h3>French Baccalaureate STI SIN </h3>
                     <p>
-                        (High School diploma specialized in IT) with honors <br> Louis Armand High School – Chambéry, France.
+                        (High School diploma specialized in IT) with high honors <br> Louis Armand High School – Chambéry, France.
                     </p>
                 </div>
 
@@ -229,8 +229,17 @@
             <h2>Experiences</h2>
             <div class="box-container">
 
+                <div class="box">
+                    <i class="fas fa-briefcase"></i>
+                    <span>May 2021 to today</span>
+                    <h3>TacticallJoob | University mental project (5 employees) Genève, Swiss</h3>
+                    <p>
+                        As part of a mental project, we created the TacticallJob website in groups of 5. The purpose of this website is to connect companies and job seekers in order to facilitate recruitment.
+                        <br> <em> Using the laravel framework.</em>
+                    </p>
+                </div>
 
-                <div class="box ">
+                <div class="box">
                     <i class="fas fa-briefcase"></i>
                     <span>June to July 2021</span>
                     <h3>Busar | Les papillons blancs (1000 employees) Aix-les-Bains, France </h3>
@@ -248,17 +257,6 @@
                         the communication between the parents and the club.
                     </p>
                 </div>
-
-                <div class="box">
-                    <i class="fas fa-briefcase"></i>
-                    <span>February 2019 (2 weeks) </span>
-                    <h3>Kitchen assistant | EHPAD (Seniors House, 50 employees) Groisy, France</h3>
-                    <p>
-                        Helping to set up, receive and put away groceries, peeling vegetables, washing vegetables, wash salads, wash dishes, clean equipment.
-                    </p>
-                </div>
-
-
             </div>
 
         </section>
@@ -347,9 +345,9 @@
                     </div>
 
                     <div class="info">
-                        <h2>Emmanuelle GRAZIANO</h2>
-                        <h3>Communication Teacher University of Savoy Annecy, France</h3>
-                        <h3> <i class="fas fa-envelope"></i>emmanuelle.graziano@univ-smb.fr</h3>
+                        <h2>Stephanie BOUCHON</h2>
+                        <h3>English Teacher University of Savoy Annecy, France</h3>
+                        <h3> <i class="fas fa-envelope"></i>stephanie.bouchon@univ-smb.fr</h3>
                     </div>
 
                 </div>
