--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <h3>HI THERE !</h3>
             <h1>I'm <span>Sylvain Churlet</span></h1>
             <p>
-                I'm a 2nd year student in Annecy's university as a programming learner. I am creative, dynamic and innovative. I’m really interested in back end, web development and database !
+                I'm a second-year student in informatic at Annecy's university. I am creative, dynamic and innovative. I am really interested in back end, web development and database !
+
             </p>
             <a href="src/others//ChurletSylvainCVAnglais.pdf" target="_blank">
                 <button class="btn">
@@ -94,7 +95,7 @@
                     <h2><i class="fas fa-running"></i> Interests </h2>
                     <h3> <span> Sports : </span> Rink Hockey (15 yeas), badminton (University sport)</h3>
                     <h3> <span> Music : </span> Clarinet (6 years) </h3>
-                    <h3> <span> Reading : </span> Fantasy (Andrew Fukuda), Science Fiction : (James Dashner)</h3>
+                    <h3> <span> Reading : </span> Fantasy (Andrew Fukuda), Science Fiction (James Dashner)</h3>
                 </div>
             </div>
 
@@ -234,7 +235,8 @@
                     <span>May 2021 to today</span>
                     <h3>TacticallJoob | University mental project (5 employees) Genève, Swiss</h3>
                     <p>
-                        As part of a mental project, we created the TacticallJob website in groups of 5. The purpose of this website is to connect companies and job seekers in order to facilitate recruitment.
+                        As part of a mental project, we created the TacticallJob website in groups of 5. The purpose of this website is to connect companies and job seekers in order to facilitate recruitment. As part of a project with 5 of my collegue, I created TacticallJob,
+                        a website. The purpose is to connect companies and job seekers in order to facilitate recruitment.
                         <br> <em> Using the laravel framework.</em>
                     </p>
                 </div>
@@ -253,12 +255,9 @@
                     <span>September 2019 to April 2020</span>
                     <h3>Civic service | HCC | Sport association Hockey Club Chambery, France</h3>
                     <p>
-                        Realization of a civic service of 8 months at the service of the club of rink field hockey of Chambery. I had for objective to supervise the young people of the club during their training as well as on the competition plateaus. I was also reinforcing
-                        the communication between the parents and the club.
-                    </p>
+                        Realization of an eight-months civic service at the Chambery's club rink hockey club. I had to supervise young people during their training and on competition plateaus. I was also reinforcing the communication between parents and the club.</p>
                 </div>
             </div>
-
         </section>
 
         <a class="anchor" id="portfolio"></a>
