--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <a href="https://github.com/Sylvain-Chu/tacticaljob" target="_blank">
                         <h2 id="title4">TactiCallJob</h2>
                         <p id="description4">
-                            This project is a university project for a company. It is a website that connects companies and job seekers.
+                            As part of a project with 5 of my collegue, I created TacticallJob, a website. The purpose is to connect companies and job seekers in order to facilitate recruitment.
                         </p>
                         <img src="src/img/TactiCallJob.png" alt="" id="img4">
                     </a>
